# cuda-memory-management

./: .travis.yml  CMakeLists.txt  README.md
ci/: build.sh  install_deps.sh
include/cmm/: cmm.hpp
test/: CMakeLists.txt  test_malloc.cu  test_managed.cu  test_roundup.cu  test_std_vector.cu  test_zerocopy.cu  writer.hpp
